@@ -21,6 +21,9 @@ Changes from 1.51-jody5 to 1.51-jody6 [JLB]
 - Floating point code was made optional and is removed by default
 - A comparison script was added to check built fdupes behavior against
   whatever fdupes is currently installed on the system
+- Added "undocumented" -Q / --quick option which is not fully safe but can
+  be used to drastically reduce run time for large data sets if some risk
+  of data loss is acceptable to the user
 
 Changes from 1.51-jody4-jkl1 to 1.51-jody5 [JLB]
 
